session / socket / db

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -60,7 +60,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+    <script type="text/javascript" src="/jst.js"></script>
     <!--TEMPLATES END-->
 
 
@@ -88,7 +88,13 @@
     -->
 
     <!--SCRIPTS-->
+    <script src="/js/dependencies/angular-loader.js"></script>
+    <script src="/js/dependencies/angular-ui-router.js"></script>
+    <script src="/js/dependencies/angular.js"></script>
+    <script src="/js/dependencies/ngsails.io.js"></script>
+    <script src="/js/dependencies/ngwaterline.js"></script>
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/waterline.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
