--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -88,13 +88,14 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/js/dependencies/angular-loader.js"></script>
-    <script src="/js/dependencies/angular-ui-router.js"></script>
     <script src="/js/dependencies/angular.js"></script>
-    <script src="/js/dependencies/ngsails.io.js"></script>
-    <script src="/js/dependencies/ngwaterline.js"></script>
+    <script src="/js/dependencies/angular-ui-router.js"></script>
     <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/js/dependencies/waterline.min.js"></script>
+    <script src="/js/dependencies/ngsails.io.js"></script>
+    <script src="/js/dependencies/waterline.js"></script>
+    <script src="/js/app-templates.js"></script>
+    <script src="/js/app.config.js"></script>
+    <script src="/js/main.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
